--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="find_match_team_mates">Mitspieler</string>
     <string name="find_match_opponents">Gegenspieler</string>
     <string name="find_match_start">{cmd-sword-cross} Match starten</string>
+    <string name="find_match_start_missing_opponent">{cmd-cancel} Match starten</string>
+    <string name="find_match_select_opponent">Wähle mindestens einen Gegenspieler aus</string>
 
     <string name="find_match_player_no_games">Noch keine Matches gespielt</string>
 
@@ -31,4 +33,8 @@
     <string name="user_cancel_action">Abbrechen</string>
     <string name="user_name_hint">Name</string>
     <string name="user_empty_error">Bitte gib etwas ein</string>
+
+    <string name="error_permission">Bitte gewähre die nötigen Berechtigungen</string>
+    <string name="error_api">Es gab ein Problem mit der Verbindung. Überprüfe ob du Internetzugriff hast</string>
+    <string name="error_unknown">Ein unbekannter Fehler ist aufgetreten</string>
 </resources>
