--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Kickchain</string>
+    <string name="app_name">Kickdroid</string>
 
-    <string name="main_welcome">Willkommen bei der Kickchain!</string>
+    <string name="main_welcome">Willkommen bei Kickdroid!</string>
     <string name="main_welcome_back">Willkommen zurück, %s</string>
     <string name="main_status_no_games">Noch keine Matches gespielt</string>
     <string name="main_set_name">Lege deinen Namen fest, indem du hier tippst.</string>
